--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <img src="img/cloud1.png" alt="cloud1" class="cloud1">
             <img src="img/cloud2.png" alt="cloud2" class="cloud2">
         </article>
+
+        <article class="town">
+            <img src="img/circle.png" alt="circle" class="circle">
+            <img src="img/town_night.png" alt="night" class="night">
+            <img src="img/town_day.png" alt="day" class="day">
+        </article>
     </section>
 </body>
 </html>
